# tft_info_collector

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tft_info_collector/: __init__.py  clean_config.py  clean_matches.py  cli.py  config.py  config.yaml  fetch_matches.py  fetch_puuids.py  riot.py  run_fetch_matches.py  schema.py
tft_info_collector/utils/: routing.py
